--- a/Assign4/assignment4.html
+++ b/Assign4/assignment4.html
@@ -21,7 +21,9 @@
             choice (use a pencil to fill in the space). Give only <b>one answer</b> for each question. </p>
 
         <form class="form" action="http://studentweb.cencol.ca/pgignac/results.php" method="post">
-            
+
+                <legend><h4>Course Name/Code: </h4></legend>
+                <input id="txtLName" name="txtLName" size="25" tabindex="3" type="text" required="required">
                 <legend><h4>Instructor</h4></legend>
                 <p>
                     <label for="txtFName">How would you rate your instructor's:</label><br>
