--- a/Assign4/assignment4.html
+++ b/Assign4/assignment4.html
@@ -15,6 +15,12 @@
             </a>
             <h2>Centennial College</h2>
             <h3>Continuing Education Course/Instructor Evaluation </h3>
+
+            <nav>
+                <a class="home" href="../index.html">
+                    Home Page
+                </a>
+            </nav>
         </header>
 
         <p>Please read each statement carefully and consider each one individually. Use the <b>computer card</b> to make
@@ -175,7 +181,7 @@
                 <li>
                     <label for="txtOthers">Others:</label>
                     <textarea id="txtOthers" cols="50" name="txtOthers" rows="8" tabindex="46"
-                        placeholder="---Please leave us a comments!---"></textarea>
+                        placeholder="---Please leave us a comment!---"></textarea>
 
                 </li>
             </ol>
