--- a/Project/project.html
+++ b/Project/project.html
@@ -41,20 +41,22 @@
 
     <div>
 
-            <div class="navbar">
-                <div class="navbar-item"><a>Home</a></div>
-                <div class="navbar-item"><a>Properties<sup>®</sup></a></div>
-                <div class="navbar-item"><a>About</a></div>
-                <div class="navbar-item"><a>Contact Form</a></div>
-                <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
-                        src="../Project/images/heart.svg" class="heart" alt="heart"></div>
-            </div>
+        <div class="navbar">
+            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project_properties.html" target="_blank"
+                    class="button-type">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" target="_blank" class="button-type">Site
+                    Map</a></div>
+            <div class="navbar-item"><a href="../Project/" target="_blank" class="button-type">Contact Form</a></div>
+            <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
+                    src="../Project/images/heart.svg" class="heart" alt="heart"></div>
+        </div>
 
 
 
-        <span class="agent-name">
+        <div class="agent-name">
             <span class="agent">Peter Papousek</span>
-        </span>
+        </div>
 
         <div class="grid-container">
             <div class="grid-item-left">
@@ -78,7 +80,7 @@
             <div class="grid-item-right">
 
                 <div>
-                    <img src="../Project/images/reimax.jpg" alt="reimax">
+                    <img src="../Project/images/reimax.jpg" alt="RE/MAX">
                     <p>RE/MAX REALTY ENTERPRISES INC.(LSE)</p>
                     <p>125 Lakeshore Road East<br>Mississauga, Ontario L5G1E5</p>
                     <p><span class="symbol">&#9990;</span> 905-278-3500<br><span class="symbol">&#9990;</span>
@@ -94,33 +96,90 @@
             <div class="agent"><span class="agent">Peter's Listings</span></div>
             <div class="listing-card-container">
                 <div class="listing-card-item">
-                    <span class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
-                            class="heart-empty"></span>
-                    <span class="img-center"><img src="../Project/images/house2.jpeg" alt="house2"></span>
-                    <div class="information">
-                        <span class="house-price">$1,699,850<br>
-                        </span>
-                        <span>128 PINETREE Way, Mississauga, Ontario</span>
-                    </div>
-                </div>    
-                    <div class="listing-card-item">
-                        <span class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
-                                class="heart-empty">
-                        </span>
-                    </div>
-                    <div class="listing-card-item">
-                        <span class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
-                                class="heart-empty">
-                        </span>
-                    </div>
-                    <div class="listing-card-item">
-                        <span class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
-                                class="heart-empty">
-                        </span>
-                    </div>
+                    <a href="../Project/project_house1.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house2"></span>
+                        <div class="address">
+                            <span class="house-price">$1,699,850<br>
+                            </span>
+                            <span>128 PINETREE Way, Mississauga, Ontario</span>
+                        </div>
+                        <div class="information">
+                            <span> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
+                                    class="bedroom"><br><span class="small-text">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span> 2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/small-peter.jpg" class="card-image" alt="small-peter"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="listing-card-item">
+                    <a href="../Project/project-house2.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house2"></span>
+                        <div class="address">
+                            <span class="house-price">$1,699,850<br>
+                            </span>
+                            <span>128 PINETREE Way, Mississauga, Ontario</span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item"> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
+                                    class="bedroom"><br><span class="small-text">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item"> 2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/small-peter.jpg" class="card-image" alt="small-peter"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="listing-card-item">
+                    <a href="../Project/project-house3.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house2"></span>
+                        <div class="address">
+                            <span class="house-price">$1,699,850<br>
+                            </span>
+                            <span>128 PINETREE Way, Mississauga, Ontario</span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item"> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
+                                    class="bedroom"><br><span class="small-text">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item"> 2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/small-peter.jpg" class="card-image" alt="small-peter"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+
             </div>
             <div class="viewall-button">
-                <a href="" target="_blank" class="mail">
+                <a href="../Project/project_properties.html" target="_blank" class="mail">
                     View All
                 </a>
             </div>
@@ -128,9 +187,19 @@
 
 
 
-        <hr>
+
+
 
         <footer>
+
+            <div class="footer-container-a">
+                <span>Give me A+</span>
+                <span>static website</span>
+                <span>final project</span>
+            </div>
+            <div class="footer-container-b">
+
+            </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
     </div>
