--- a/Project/template.html
+++ b/Project/template.html
@@ -14,7 +14,7 @@
     <header>
         <div class="project-container">
             <a class="banner" href="../Project/project.html" target="_blank">
-              <img src="../Project/images/logo.svg" class="project-logo" alt="project-logo">
+                <img src="../Project/images/logo.svg" class="project-logo" alt="project-logo">
             </a>
 
             <div class="buttons">
@@ -22,8 +22,10 @@
                     <li>
                         <span class="cad-container">CAD</span>
                     </li>
-                    <li><span class="v-container"><img src="../Project/images/arrow-down-white2.svg"></span></li>
-                    <li><span class="icon-container"><img src="../Project/images/profile-icon.svg" class="project-icon" alt="profile">Sign in</span></li>
+                    <li><span class="v-container"><img src="../Project/images/arrow-down-white2.svg"
+                                alt="arrow-down"></span></li>
+                    <li><span class="icon-container"><img src="../Project/images/profile-icon.svg" class="project-icon"
+                                alt="profile">Sign in</span></li>
                     <li>
                         <span class="project-toggle ">
                             <a class="toggleOption selected" data-value="1">EN</a>
@@ -38,22 +40,32 @@
     </header>
 
     <div>
-            <div class="navbar">
-                <div class="navbar-item"><a>Home</a></div>
-            
-                <div class="navbar-item"><a>Find a REALTOR<sup>®</sup></a></div>
-                <div class="navbar-item"><a>About</a></div>
-                <div class="navbar-item"><a>Properties</a></div>
-                <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img src="../Project/images/heart.svg" class="heart"></div>    
-            </div>
+        <div class="navbar">
+            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project_properties.html" target="_blank"
+                    class="button-type">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" target="_blank" class="button-type">Site
+                    Map</a></div>
+            <div class="navbar-item"><a href="../Project/" target="_blank" class="button-type">Contact Form</a></div>
+            <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
+                    src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
 
 
 
-        <hr>
+
+
 
         <footer>
+            <div class="footer-container-a">
+                <span>Give me A+</span>
+                <span>static website</span>
+                <span>final project</span>
+            </div>
+            <div class="footer-container-b">
+
+            </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
     </div>
