--- a/Project/project_house1.html
+++ b/Project/project_house1.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="project-container">
-            <a class="banner" href="../Project/project.html" target="_blank">
+            <a class="banner" href="../Project/project.html">
                 <img src="../Project/images/logo.svg" class="project-logo" alt="project-logo">
             </a>
 
@@ -41,41 +41,42 @@
 
     <div>
         <div class="navbar">
-            <div class="navbar-item"><a>Home</a></div>
-
-            <div class="navbar-item"><a>Find a REALTOR<sup>®</sup></a></div>
-            <div class="navbar-item"><a>About</a></div>
-            <div class="navbar-item"><a>Properties</a></div>
+            <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
+            <div class="navbar-item"><a href="../Project/project_properties.html"
+                    class="button-type">Properties<sup>®</sup></a></div>
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
+                    Map</a></div>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            </div>
             <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
-        <div class="listing-container">
-            <div class="agent"><span class="agent">128 PINETREE Way</span></div>
-            <div class="listing-card-container">
-                <div class="listing-card-item">
-                    <img src="../Project/images/house1_1.jpg" alt="house1" class="house-image">
-                </div>
-                <div class="listing-card-item">
-                    <img src="../Project/images/house1_2.jpg" alt="house1" class="house-image">
-                </div>
-                <div class="listing-card-item">
-                    <img src="../Project/images/house1_3.jpg" alt="house1" class="house-image">
-                </div>
-                <div class="listing-card-item">
-                    <img src="../Project/images/house1_4.jpg" alt="house1" class="house-image">
-                </div>
-                <div class="listing-card-item">
-                    <img src="../Project/images/house1_5.jpg" alt="house1" class="house-image">
-                </div>
 
+        <div class="agent"><span class="agent">128 PINETREE Way</span></div>
+        <div class="listing-card-house-container-a">
+            <div class="listing-card-item">
+                <img src="../Project/images/house1_1.jpeg" alt="house1" class="house-image">
+            </div>
+            <div class="listing-card-item">
+                <img src="../Project/images/house1_2.jpg" alt="house1" class="house-image">
+            </div>
+            <div class="listing-card-item">
+                <img src="../Project/images/house1_3.jpg" alt="house1" class="house-image">
+            </div>
+            <div class="listing-card-item">
+                <img src="../Project/images/house1_4.jpg" alt="house1" class="house-image">
+            </div>
+            <div class="listing-card-item">
+                <img src="../Project/images/house1_5.jpg" alt="house1" class="house-image">
             </div>
         </div>
+
 
         <div class="listing-container">
             <div class="listing-card-house-container">
                 <div class="listing-card-item-a">
-                    <span class="listing-card-sub-item-a"> 
+                    <span class="listing-card-sub-item-a">
                         <span class="house-price">$1,699,850</span>
                         <span>128 PINETREE Way<br>Mississauga, Ontario L5G2R2</span><br>
                         <span>MLS <sup>®</sup> Number: 40328877</span>
@@ -83,14 +84,14 @@
                 </div>
                 <div class="listing-card-item-b">
                     <span class="house-heart"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
-                        class="heart-empty-house">
+                            class="heart-empty-house">
                     </span>
                     <span class="small-text-end">Favourite</span>
                     <span class="information-house">
                         <span class="information-item"> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
                                 class="bedroom"><br><span class="small-text">Bedrooms</span></span>
-                        <span class="information-item"> &nbsp;&nbsp;2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
-                                class="bedroom"><br><span class="small-text">Bathrooms</span></span>
+                        <span class="information-item"> &nbsp;&nbsp;2 <img src="../Project/images/bath-gray.svg"
+                                alt="bathroom" class="bedroom"><br><span class="small-text">Bathrooms</span></span>
                     </span>
                 </div>
             </div>
@@ -99,7 +100,18 @@
         <div class="listing-container">
             <p><span class="description">Description</span>
                 <br><br>
-                Spectacular Bungalow 2,262Sqft. On A Private 101X100Ft. Lot Surrounded By Majestic Mature Trees &amp; Perennial Gardens In Coveted Mineola Neighbourhood Close To Waterfront Trails, Top Schools, Port Credit Village, Qew, Parks, &amp; Lake Ontario. Exceptional Open Concept Layout Boasting Expansive Windows Throughout Including A Skylight Allowing Natural Light To Flood The Home. Magnificent Modern Design Includes Splendid High Vaulted Ceilings In Both The Dining &amp; Living Rooms, White Oak Wood Floors On The Main Level, Gas Fireplace, &amp; Beautiful Kitchen. Spacious 4 Bdrms &amp; 2 Baths W/ Primary, 2 Bdrms &amp; 4-Pc Bath Located On Main Level For Convenience. Wonderful Lower Level W/ Its Own Separate Entrance, Rec Room, Above Grade Windows, Bedroom, &amp; 3-Piece Bathroom. Expansive Landscaped Backyard Includes Interlocking Patio &amp; Firepit. Upgrades: Tankless Hot Water Tank, Sump Pump, &amp; New Furnace. You Will Find In This Home The Ideal Haven For Entering The Property Ladder, Investing, Or Raising A Young Family. Includes All Electrical Light Fixtures, Appliances And Window Coverings (65240741)
+                Spectacular Bungalow 2,262Sqft. On A Private 101X100Ft. Lot Surrounded By Majestic Mature Trees &amp;
+                Perennial Gardens In Coveted Mineola Neighbourhood Close To Waterfront Trails, Top Schools, Port Credit
+                Village, Qew, Parks, &amp; Lake Ontario. Exceptional Open Concept Layout Boasting Expansive Windows
+                Throughout Including A Skylight Allowing Natural Light To Flood The Home. Magnificent Modern Design
+                Includes Splendid High Vaulted Ceilings In Both The Dining &amp; Living Rooms, White Oak Wood Floors On
+                The Main Level, Gas Fireplace, &amp; Beautiful Kitchen. Spacious 4 Bdrms &amp; 2 Baths W/ Primary, 2
+                Bdrms &amp; 4-Pc Bath Located On Main Level For Convenience. Wonderful Lower Level W/ Its Own Separate
+                Entrance, Rec Room, Above Grade Windows, Bedroom, &amp; 3-Piece Bathroom. Expansive Landscaped Backyard
+                Includes Interlocking Patio &amp; Firepit. Upgrades: Tankless Hot Water Tank, Sump Pump, &amp; New
+                Furnace. You Will Find In This Home The Ideal Haven For Entering The Property Ladder, Investing, Or
+                Raising A Young Family. Includes All Electrical Light Fixtures, Appliances And Window Coverings
+                (65240741)
             </p>
             <p> </p>
             <p><span class="description">Location</span>
@@ -116,50 +128,93 @@
                     <th></th>
                 </tr>
                 <tr>
-                    <td rowspan="6"></td>
-                    <td></td>
-                    <td class="special">Long Range AWD</td>
+                    <td colspan="4" class="category">Bedrooms</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td>Compare</td>
+                    <td class="house-last"><b>Above Grade</b><br>3</td>
+                    <td><b>Below Grade</b><br>1</td>
+
                 </tr>
                 <tr>
-                    <td></td>
-                    <td class="ivan">Battery<br>Long Range</td>
-                    <td class="ivan">Weight<br>1,830kg</td>
+                    <td colspan="4" class="category">Bathrooms</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td class="ivan">Acceleration<br>4.4 s 0-100 km/h</td>
-                    <td class="ivan">Cargo<br>649 litres</td>
+                    <td class="house-last"><b>Total</b><br>2</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td class="ivan">Range<br>576 km (EPA est.)</td>
-                    <td class="ivan">Displays<br>15" Center Touchscreen</td>
+                    <td colspan="4" class="category">Interior Features</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td class="ivan">Drive<br>Dual Motor All-Wheel Drive</td>
-                    <td class="ivan">Supercharging Max/Payment Type<br>250 kW Max; Pay Per Use
+                    <td class="house-last"><b>Appliances Included</b><br>Central Vacuum, Dishwasher,<br>Freezer,
+                        Microwave,<br>Refrigerator, Stove, Window<br>Coverings</td>
+                    <td><b><span>Fixtures Included</span></b><br>Ceiling fans</td>
+                    <td><b><span>Basement Type</span></b><br>Full (Finished)</td>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Building Features</td>
+                </tr>
+                <tr>
+                    <td class="house-last"><b>Features</b><br>Park/reserve, Skylight<br><br><b>Square
+                            Footage</b><br>2262</td>
+                    <td><b>Foundation Type</b><br>Poured Concrete<br><br><b>Total Units</b><br>0</td>
+                    <td><b><span>Style</span></b><br>Detached</td>
+                    <td><b><span>Architecture Style</span></b><br>Bungalow</td>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Heating & Cooling</td>
+                </tr>
+                <tr>
+                    <td class="house-last"><b>Cooling</b><br>Central air conditioning</td>
+                    <td><b>Heating Type</b><br>Forced air, (Natural gas)</td>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Utilities</td>
+                </tr>
+                <tr>
+                    <td class="house-last"><b>Utility Sewer</b><br>Municipal sewage system</td>
+                    <td><b>Water</b><br>Municipal water</td>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Exterior Features</td>
+                </tr>
+                <tr>
+                    <td class="house-last"><b>Exterior Finish</b><br>Brick, Vinyl siding</td>
+                </tr>
+                <tr>
+                    <td colspan="4" class="category">Neighbourhood Features</td>
+                </tr>
+                <tr>
+                    <td class="house-last"><b>Amenities Nearby</b>Park, Playground, Public<br>Transit, Schools, Shopping
                     </td>
+                    <td><b>Heating Type</b><br>Forced air, (Natural gas)</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="listing-container">
+            <table>
+                <tr>
+                    <th class="title" colspan="2">Land</th>
+                    <th></th>
+                    <th></th>
                 </tr>
                 <tr>
-                    <td class="performance">Model 3 Performance $82,000</td>
-                    <td class="ivan">Seating<br> 5 Adults</td>
-                    <td class="ivan">Onboard Charger Max<br>11.5 kW max (48A)</td>
+                    <td colspan="4" class="category">Lot Features</td>
                 </tr>
                 <tr>
-                    <td><a class="home" href="../Assign3/Detail.html">
-                        View Larger Picture
-                        </a>
-                    </td>
-                    <td class="ivan">Wheels<br> 18" or 19"</td>
-                    <td class="ivan">Warranty<br> Basic Vehicle - 4 years or 80,000 km, whichever comes first Battery &
-                        Drive Unit - 8 years or 192,000 km, whichever comes first</td>
+                    <td class="house-last"><b>Frontage</b><br>100 ft</td>
+                    <td><b>Land Depth</b><br>101 ft</td>
+                    <td><b>Landscape Features</b><br>Landscaped</td>
+                    <td>&nbsp;</td>
                 </tr>
+                <tr>
+                    <td colspan="4" class="category">Other Property Information</td>
+                </tr>
+                <tr>
+                    <td class="house-last"><b>Access</b><br>Highway access</td>
+                    <td><b>Zoning Description</b><br>R2</td>
+                </tr>
+
             </table>
         </div>
 
