--- a/Project/project.html
+++ b/Project/project.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="project-container">
-            <a class="banner" href="../Project/project.html" target="_blank">
+            <a class="banner" href="../Project/project.html">
                 <img src="../Project/images/logo.svg" class="project-logo" alt="project-logo">
             </a>
 
@@ -43,11 +43,12 @@
 
         <div class="navbar">
             <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
-            <div class="navbar-item"><a href="../Project/project_properties.html" target="_blank"
+            <div class="navbar-item"><a href="../Project/project_properties.html"
                     class="button-type">Properties<sup>®</sup></a></div>
-            <div class="navbar-item"><a href="../Project/project_sitemap.html" target="_blank" class="button-type">Site
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
                     Map</a></div>
-            <div class="navbar-item"><a href="../Project/" target="_blank" class="button-type">Contact Form</a></div>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            </div>
             <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
@@ -66,7 +67,11 @@
                 </div>
                 <div class="vertical-container">
                     <div>
-                        <p><span class="sales-name">Peter Papousek</span><br><span class="job">Salesperson</span></p>
+                        <p>
+                            <!--<span class="sales-name">Peter Papousek</span>-->
+                            <span class="sales-name">Peter Papousek</span>
+                            <br><span class="job">Salesperson</span>
+                        </p>
                         <p><span class="location">Mississauga, Ontario</span></p>
                     </div>
                     <div class="mail-button">
@@ -99,34 +104,7 @@
                     <a href="../Project/project_house1.html" target="_blank" class="button-type">
                         <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
                                 class="heart-empty"></div>
-                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house2"></span>
-                        <div class="address">
-                            <span class="house-price">$1,699,850<br>
-                            </span>
-                            <span>128 PINETREE Way, Mississauga, Ontario</span>
-                        </div>
-                        <div class="information">
-                            <span> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
-                                    class="bedroom"><br><span class="small-text">Bedrooms</span></span>
-                            <span class=""> </span>
-                            <span> 2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
-                                    class="bedroom"><br><span class="small-text">Bathrooms</span></span>
-                        </div>
-                        <div class="company-name">
-                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
-                        </div>
-                        <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image" alt="small-peter"></span>
-                            <span></span>
-                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
-                        </div>
-                    </a>
-                </div>
-                <div class="listing-card-item">
-                    <a href="../Project/project-house2.html" target="_blank" class="button-type">
-                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
-                                class="heart-empty"></div>
-                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house2"></span>
+                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house1"></span>
                         <div class="address">
                             <span class="house-price">$1,699,850<br>
                             </span>
@@ -143,34 +121,64 @@
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image" alt="small-peter"></span>
+                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
+                                    alt="small-peter"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
                     </a>
                 </div>
                 <div class="listing-card-item">
-                    <a href="../Project/project-house3.html" target="_blank" class="button-type">
+                    <a href="../Project/project_house2.html" target="_blank" class="button-type">
                         <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
                                 class="heart-empty"></div>
-                        <span class="img-center"><img src="../Project/images/house1.jpeg" alt="house2"></span>
+                        <span class="img-center"><img src="../Project/images/house2.jpg" alt="house2"></span>
                         <div class="address">
-                            <span class="house-price">$1,699,850<br>
+                            <span class="house-price">$2,649,850<br>
                             </span>
-                            <span>128 PINETREE Way, Mississauga, Ontario</span>
+                            <span>422 MARF Avenue, Mississauga, Ontario </span>
                         </div>
                         <div class="information">
-                            <span class="information-item"> 3+1 <img src="../Project/images/bed-gray.svg" alt="bedroom"
+                            <span class="information-item"> 4+2 <img src="../Project/images/bed-gray.svg" alt="bedroom"
                                     class="bedroom"><br><span class="small-text">Bedrooms</span></span>
                             <span class=""> </span>
-                            <span class="information-item"> 2 <img src="../Project/images/bath-gray.svg" alt="bathroom"
+                            <span class="information-item"> 6 <img src="../Project/images/bath-gray.svg" alt="bathroom"
                                     class="bedroom"><br><span class="small-text">Bathrooms</span></span>
                         </div>
                         <div class="company-name">
                             <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
                         </div>
                         <div class="listing-card-end">
-                            <span><img src="../Project/images/small-peter.jpg" class="card-image" alt="small-peter"></span>
+                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
+                                    alt="small-peter"></span>
+                            <span></span>
+                            <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
+                        </div>
+                    </a>
+                </div>
+                <div class="listing-card-item">
+                    <a href="../Project/project_house3.html" target="_blank" class="button-type">
+                        <div class="like"><img src="../Project/images/heart-empty.svg" alt="heart-empty"
+                                class="heart-empty"></div>
+                        <span class="img-center"><img src="../Project/images/house3.jpg" alt="house3"></span>
+                        <div class="address">
+                            <span class="house-price">$3,999,000<br>
+                            </span>
+                            <span>39 PINE VALLEY Road, Port Severn, Ontario </span>
+                        </div>
+                        <div class="information">
+                            <span class="information-item white"> 3+1 <img src="../Project/images/bed-white.svg" alt="bedroom"
+                                    class="bedroom white"><br><span class="small-text white">Bedrooms</span></span>
+                            <span class=""> </span>
+                            <span class="information-item white"> 2 <img src="../Project/images/bath-white.svg" alt="bathroom"
+                                    class="bedroom"><br><span class="small-text white">Bathrooms</span></span>
+                        </div>
+                        <div class="company-name">
+                            <span class="small-text">RE/MAX REALTY ENTERPRISES INC.(LSE)</span>
+                        </div>
+                        <div class="listing-card-end">
+                            <span><img src="../Project/images/small-peter.jpg" class="card-image"
+                                    alt="small-peter"></span>
                             <span></span>
                             <span><img src="../Project/images/reimax.jpg" alt="RE/MAX"></span>
                         </div>
@@ -198,7 +206,7 @@
                 <span>final project</span>
             </div>
             <div class="footer-container-b">
-
+    
             </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
