--- a/Project/template.html
+++ b/Project/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Created by: FAN HOI KIT, ID 301249275 on October 27, 2022-->
+<!--https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5-->
 
 <head>
     <title>FAN HOI KIT, Ivan - Home Page</title>
@@ -11,9 +12,10 @@
 
 
 <body>
+
     <header>
         <div class="project-container">
-            <a class="banner" href="../Project/project.html" target="_blank">
+            <a class="banner" href="../Project/project.html">
                 <img src="../Project/images/logo.svg" class="project-logo" alt="project-logo">
             </a>
 
@@ -34,37 +36,46 @@
                     </li>
                 </ul>
             </div>
-
-
         </div>
     </header>
 
     <div>
+
         <div class="navbar">
             <div class="navbar-item"><a href="../index.html" target="_blank" class="button-type">Index</a></div>
-            <div class="navbar-item"><a href="../Project/project_properties.html" target="_blank"
+            <div class="navbar-item"><a href="../Project/project_properties.html"
                     class="button-type">Properties<sup>®</sup></a></div>
-            <div class="navbar-item"><a href="../Project/project_sitemap.html" target="_blank" class="button-type">Site
+            <div class="navbar-item"><a href="../Project/project_sitemap.html" class="button-type">Site
                     Map</a></div>
-            <div class="navbar-item"><a href="../Project/" target="_blank" class="button-type">Contact Form</a></div>
+            <div class="navbar-item"><a href="../Project/project_contact_form.html" class="button-type">Contact Form</a>
+            </div>
             <div class="navbar-last"><img src="../Project/images/searches.svg" class="search" alt="search"><img
                     src="../Project/images/heart.svg" class="heart" alt="heart"></div>
         </div>
 
 
-
-
-
-
-
         <footer>
+
             <div class="footer-container-a">
                 <span>Give me A+</span>
                 <span>static website</span>
                 <span>final project</span>
             </div>
             <div class="footer-container-b">
-
+                <ul>
+                    <li><span>reference: <a class="footer-b"
+                                href="https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5">https://www.realtor.ca/agent/2055772/peter-papousek-125-lakeshore-road-east-mississauga-ontario-l5g1e5</a></span>
+                    </li>
+                    <li><span>reference: <a class="footer-b"
+                                href="https://www.realtor.ca/real-estate/24911864/128-pinetree-way-mississauga">https://www.realtor.ca/real-estate/24911864/128-pinetree-way-mississauga</a></span>
+                    </li>
+                    <li><span>reference: <a class="footer-b"
+                                href="https://www.realtor.ca/real-estate/25088039/422-marf-avenue-mississauga">https://www.realtor.ca/real-estate/25088039/422-marf-avenue-mississauga</a></span>
+                    </li>
+                    <li><span>reference: <a class="footer-b"
+                                href="https://www.realtor.ca/real-estate/24894336/39-pine-valley-road-port-severn">https://www.realtor.ca/real-estate/24894336/39-pine-valley-road-port-severn</a></span>
+                    </li>
+                </ul>
             </div>
             <h5>&copy; Copyright FAN HOI KIT - ID: 301249275 - COMP213 - Fall 2022</h5>
         </footer>
